[tool.poetry]
name = "practical01"
version = "0.1.0"
description = ""
authors = ["joenofriends <95723875+joenofriends@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
